# cgem-forge

./: .gitignore  README.md  alternative_solvers.ipynb  cgem_pipeline.ipynb  cgem_pipeline_docker.ipynb  micom_pipeline.ipynb  pyproject.toml
data/compounds/: BIGG_metabolites.json  inorganic.txt
data/media/: media_db.tsv  media_tara.tsv  readme.txt
data/universes/BIGG_universal_model/: universal_model.ipynb
envs/: cgem-forge-dev.yml  cgem-froge.yml  microcom-dev.yml  microcom.yml
kubeflow/node_0_carveme/: Dockerfile  environment.yml  script.py
kubeflow/node_1_smetana/: Dockerfile  environment.yml
kubeflow/node_2_micom/: Dockerfile  script.py
notebooks/: cgem_indices.ipynb  cgem_pipeline.ipynb  cgem_pipeline_docker.ipynb
pipeline/: cgem_pipeline_docker.ipynb
pipeline/node_1_carveme/: Dockerfile  Dockerfile.dev  entrypoint.py  entrypoint_parallel.py  environment.yml
pipeline/node_2_micom/: get_elasticities.py  get_medium_from_media_db.py
pipelines/: carveme.nf  community_modeling.nf  gem_reconstruction.nf  micom.nf
pipelines/kubeflow/node_0_b_carveme/: Dockerfile
pipelines/kubeflow/node_0_carveme/: environment.yml  script.py
pipelines/kubeflow/node_1_b_micom/: script.py
pipelines/kubeflow/node_1_carveme/: Dockerfile  entrypoint.py
pipelines/kubeflow/node_1_smetana/: script.py
pipelines/kubeflow/node_2_micom/: Dockerfile  build_cgem.py  build_taxa_table.py  get_exchanges.py  requirements.txt  script.py
pipelines/kubeflow/node_3_visualization/: Dockerfile  entrypoint.py  plot_interactions.py  requirements.txt
pipelines/nextflow/: community_modeling.nf
src/: get_elasticities.py  helper_functions.py  parse_media.py
src/cgem-forge/: build_cgem.py  build_taxa_table.py  elasticities.py  get_elasticities.py  get_exchanges.py  visualization.py
src/microcom/: quality.py  reconstruction.py  reconstruction_helpers.py
tests/data/: abundances.tsv  genome_table.tsv
tests/results/: elasticities.tsv  exchanges.tsv  manifest.csv  marine_media.tsv  micom_database.tsv
tutorials/: 0_constraint_based_modeling.ipynb  1_model_reconstructions.ipynb  2_metabolic_interactions.ipynb  3_universal_metabolic_models.ipynb  5_ecosystem_function_indices.ipynb  6_integrating_cgems_with_populations.ipynb  optimizing_communities.ipynb
