[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "microcom"
version = "0.0.2"
description = "Reconstructing microbial communities from genomic data"
license = "Apache-2.0"
authors = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/robaina/Phycogem"
repository = "https://github.com/robaina/Phycogem"
documentation = "https://github.com/robaina/Phycogem"
keywords = [
    "metagenomics",
    "bioinformatics",
    "phycosphere",
    "genome-scale modeling",
    "metabolism",
    "microbiome",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "microcom", from = "src" }]
[tool.poetry.dependencies]
python = "^3.8"
# [tool.poetry.scripts]
# microcom = "microcom.cli:main"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # mccabe complexity
    "E999", # match statement is not yet supported
    "W605", # ASCII art, verbatim text
]

[tool.ruff.isort]
known-first-party = ["microcom"]
