[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cgem-forge"
version = "0.0.2"
description = "Reconstructing microbial communities from genomic data"
license = "Apache-2.0"
authors = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/robaina/cgem-forge"
repository = "https://github.com/robaina/cgem-forge"
documentation = "https://github.com/robaina/cgem-forge"
keywords = [
    "metagenomics",
    "bioinformatics",
    "genome-scale modeling",
    "metabolism",
    "microbiome",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "cgem-forge", from = "src" }]
[tool.poetry.dependencies]
python = "^3.8"
# [tool.poetry.scripts]
# cgem-forge = "cgem-forge.cli:main"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # mccabe complexity
    "W605", # ASCII art, verbatim text
]

[tool.ruff.isort]
known-first-party = ["cgem-forge"]
